--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,33 +528,37 @@ margin-bottom: 20px;
 .meettext{
   font-size: 14px;
 }
-.ghazal{
-  background-image: url(ghazal.jpg);
+.Taylor1{
+  background-image: url(taylor1.jpg);
   width: 300px;
 height: 300px;
 background-size: cover;
 border-radius: 50%;
+background-position: center;
 }
-.ali{
-  background-image: url(ali.jpg);
+.Taylor2{
+  background-image: url(taylor2.jpg);
   width: 300px;
 height: 300px;
 background-size: cover;
 border-radius: 50%;
+background-position: center;
 }
-.negar{
-  background-image: url(negar.jpg);
+.Taylor3{
+  background-image: url(taylor3.jpg);
   width: 300px;
 height: 300px;
 background-size: cover;
 border-radius: 50%;
+background-position: center;
 }
-.nima{
-  background-image: url(nima.jpg);
+.Taylor4{
+  background-image: url(taylor4.jpg);
   width: 300px;
 height: 300px;
 background-size: cover;
 border-radius: 50%;
+background-position: center;
 }
 .overly{
   width: 100%;
